<resources>
    <string name="app_name">hackapp</string>

    <string name="settings_prefs_filename">hackapp_prefs</string>

    <string name="profile">Профиль</string>

    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="fio">ФИО</string>
    <string name="register">Регистрация</string>

    <string name="count_options">Кол-во вариантов:\n<b>%d</b></string>
    <string name="seat_cost">Стоимость места:\n<b>%s</b></string>
    <string name="stay_duration">Продолжительность пребывания:\n<b>%s</b></string>
    <string name="dates">Даты проведения:\n%s - %s</string>

    <plurals name="friends_count">
        <item quantity="zero">%d твоих друзей посетили это мероприятие</item>
        <item quantity="one">%d твой друг посетили это мероприятие</item>
        <item quantity="two">%d твоих друга посетили это мероприятие</item>
        <item quantity="few">%d твоих друга посетили это мероприятие</item>
        <item quantity="many">%d твоих друзей посетили это мероприятие</item>
        <item quantity="other">%d твоих труга посетили это мероприятие</item>
    </plurals>
    <string name="friends_count">3 твоих друга посетили это мероприятие</string>

    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="empty_field_error">Поле не заполнено</string>
    <string name="incorrect_email_error">Email заполнен неверно</string>
    <string name="short_password_error">Пароль должен быть длинее 6-ти символов</string>
    <string name="fio_error">ФИО заполнено некорректно</string>
    <string name="search">Поиск</string>
    <string name="home">Домашняя</string>

    <string name="news">Новости</string>
    <string name="places">Места</string>
    <string name="shop">Лавка</string>
    <string name="about_project">О проекте</string>
    <string name="events">События</string>
    <string name="friends">Друзья</string>

    <string name="team_faane">Team FAANE</string>
    <string name="team_faane_mail">.@TeamFaane</string>

    <string name="date">Дата</string>
    <string name="select_date">Выберите дату</string>
    <string name="good_morning">Добре утро %s!</string>
    <string name="splash_text">Время открывать\nновые горизонты!</string>

    <string name="balance">Баланс: %d рубинов</string>
    <string name="price">%d рубинов</string>

    <string name="scientific">Научно-популярные</string>
    <string name="cultural">Культурно-позновательные</string>
    <string name="proforientation">Профориентация</string>
    <string name="timeout_error">Время ожидания истекло</string>
    <string name="ssl_handshake_error">Проверьте дату и время на устройстве</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Выход</string>

</resources>