<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Профиль">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="18sp"
            app:rippleColor="#F44336"
            android:textColor="#F44336"
            android:textAllCaps="false"
            android:layout_gravity="end"
            android:layout_marginEnd="14dp"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/im_mountain_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mountain_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/im_back_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_image_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/im_mountain_profile" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/im_profile"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:scaleType="centerCrop"
            app:strokeWidth="5dp"
            android:padding="3dp"
            app:strokeColor="@color/light_grey"
            android:background="@color/white"
            app:shapeAppearanceOverlay="@style/ShapeOval"
            android:src="@drawable/ic_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/im_mountain_profile"/>

        <ImageView
            android:id="@+id/im_profile_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image_profile"
            android:translationZ="10dp"
            app:layout_constraintBottom_toBottomOf="@id/im_profile"
            app:layout_constraintEnd_toEndOf="@id/im_profile" />

        <TextView
            android:id="@+id/tv_name_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/team_faane"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/im_profile_click" />

        <TextView
            android:id="@+id/tv_mail_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/team_faane_mail"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_profile" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_about_me_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Информация обо мне"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mail_profile" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_my_order_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="История событий"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/button_about_me_profile"
            app:layout_constraintStart_toStartOf="@id/button_about_me_profile"
            app:layout_constraintTop_toBottomOf="@id/button_about_me_profile" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_my_life_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="История проживаний"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/button_my_order_profile"
            app:layout_constraintStart_toStartOf="@id/button_my_order_profile"
            app:layout_constraintTop_toBottomOf="@id/button_my_order_profile" />

        <View
            android:id="@+id/view_profile"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_my_life_profile" />

        <TextView
            android:id="@+id/tv_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="Ачивки"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_profile" />

        <LinearLayout
            android:id="@+id/ll_achievements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_achievements">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:src="@drawable/ic_ac_1" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:src="@drawable/ic_ac_2" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:src="@drawable/ic_ac_3" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:src="@drawable/ic_ac_4" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_goals_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/yellow"
            android:text="Поставить цель"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="18dp"
            app:icon="@drawable/award"
            app:iconTint="@color/black"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_achievements" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>